# pixfight

./: .gitignore  license.txt  readme.md
CORE/: Core-pch.cpp  Core-pch.hpp
CORE/AI/: AIAware.hpp  AIBaseInclude.hpp  AIObject.cpp  AIObject.hpp  AIPlayer.cpp  AIPlayer.hpp  AITask.hpp  AITaskGenerator.cpp  AITaskGenerator.hpp
CORE/Audio/: Audio.cpp  Audio.hpp
CORE/GameLogic/: Drawable.hpp  GameBase.cpp  GameBase.hpp  GameEnums.hpp  GameLogic.cpp  GameLogic.hpp  GameMap.cpp  GameMap.hpp  GameSync.cpp  GameSync.hpp  GameUnit.cpp  GameUnit.hpp  MapTile.hpp
CORE/Math/: MathTypes.h  x.h  x9F32.h  xMat33.h  xMat34.h  xMath.cpp  xMath.h  xPlane.h  xQuat.h  xSimpleTypes.h  xVec2.h  xVec3.cpp  xVec3.h  xf.h
CORE/PathFinding/: SearchNode.cpp  SearchNode.hpp  stlastar.hpp
CORE/Rendering/: DrawingContext.cpp  DrawingContext.hpp  GameAnimation.cpp  GameAnimation.hpp  Mesh2d.cpp  Mesh2d.hpp
CORE/Resources/maps/: Hunt.lgf  Hunt.map  kingofhill.map  pasage.map  tutorial.map  waterway.lgf  waterway.map
CORE/Resources/shaders/Desktop/: fontsimple.fsh  fontsimple.vsh  tile.fsh  tile.vsh
CORE/Resources/shaders/Mobile/: fontsimple.vsh  tile.fsh
CORE/Shader/: ShaderProgram.cpp  ShaderProgram.hpp
CORE/font/: FontRender.cpp  FontRender.hpp
CORE/iFurionGL/: DataTypes.cpp  FGLCollisions.cpp  FGLDrawingDescriptor.cpp  FGLMath.cpp  FGLTexture.cpp  FGLVector.cpp  FurionGL.cpp  FurionGL.hpp
CORE/utilities/: BasePathExtraction.cpp  BasePathExtraction.hpp  CFrustum.hpp  Semaphore.hpp  glMatrix4x4.cpp  glMatrix4x4.hpp  glTextureLoader.cpp  glTextureLoader.hpp
CORE/utilities/Timer/: AndroidTimer.cpp  AndroidTimer.hpp  DarwinTimer.cpp  DarwinTimer.hpp  GameTimer.cpp  GameTimer.hpp  WindowsTimer.cpp  WindowsTimer.hpp
MAPEDITOR/: Makefile  PFMapEditor.cpp  PFMapEditor.hpp  main.cpp
PLATFORM/Android/: gradle.properties
PLATFORM/Android/FMOD/inc/: fmod_common.h
PLATFORM/Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
PLATFORM/Android/app/src/main/: AndroidManifest.xml
PLATFORM/Android/app/src/main/assets/: fontsimple.fsh  kingofhill.lgf  pasage.lgf  tile.vsh  tutorial.lgf
PLATFORM/Android/app/src/main/cpp/: native-lib.cpp  native-lib.h
PLATFORM/Android/app/src/main/java/com/noclip/marcinmalysz/pixfight/: PFActivity.java  PFAudioWrapper.java  PFGL2View.java  PFGameLib.java  PFImmersiveMode.java  PFJoinRoomFragment.java  PFLoadGameActivity.java  PFLoadGameFragment.java  PFMainMenuActivity.java  PFMainMenuFragment.java  PFMakeRoomFragment.java  PFMultiplayerFragment.java  PFNewGameActivity.java  PFNewGameFragment.java  PFRenderActivity.java  PFRenderFragment.java  PFSettingsActivity.java  PFSettingsFragment.java  PFUtils.java  ProgressDialog.java
PLATFORM/Android/app/src/main/res/drawable/: statesbutton.xml
PLATFORM/Android/app/src/main/res/layout/: activity_main.xml  activity_pfload_game.xml  activity_pfmain_menu.xml  activity_pfnew_game.xml  activity_pfrender.xml  activity_pfsettings.xml  fragment_pfjoin_room.xml  fragment_pfload_game.xml  fragment_pfmain_menu.xml  fragment_pfmake_room.xml  fragment_pfmultiplayer.xml  fragment_pfnew_game.xml  fragment_pfrender.xml  fragment_pfsettings.xml  list_item.xml  waiting_dialog.xml
PLATFORM/Android/app/src/main/res/raw/: keep.xml
PLATFORM/Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
PLATFORM/Android/gradle/wrapper/: gradle-wrapper.properties
PLATFORM/HTML5/: Makefile  main.cpp
PLATFORM/HTML5/FMOD/inc/: fmod_common.h
PLATFORM/HTML5/FMOD/lib/: fmod.bc  fmodL.bc  fmod_reduced.bc
PLATFORM/Linux/: ApplicationRunLoop.cpp  ApplicationRunLoop.hpp  BaseScene.hpp  JoinRoomScene.cpp  JoinRoomScene.hpp  LoadGameScene.cpp  LoadGameScene.hpp  MakeRoomScene.cpp  MakeRoomScene.hpp  MenuScene.cpp  MenuScene.hpp  MultiplayerScene.cpp  MultiplayerScene.hpp  NewGameScene.cpp  NewGameScene.hpp  PFSettings.cpp  PFSettings.h  RenderScene.cpp  RenderScene.hpp  SceneManager.cpp  SceneManager.hpp  SettingsScene.cpp  SettingsScene.hpp  main.cpp  nuklear_glfw_gl3.h  pixfight.cbp  pixfight.depend  pixfight.layout
PLATFORM/RaspberryPi/: pixfight.cbp  pixfight.depend  pixfight.layout
PLATFORM/Windows/FMOD/inc/: fmod.cs
PLATFORM/Windows/FMOD/lib/: fmod64_vc.lib  fmodL64_vc.lib  fmodL_vc.lib  fmod_vc.lib
PLATFORM/Windows/pixfight/: pixfight.cpp  pixfight.sln  pixfight.vcxproj  pixfight.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
PLATFORM/iOS/PixFight/: AppDelegate+Audio.h  AppDelegate.h  AppDelegate.mm  Info.plist  PixFight-prefix.pch  main.m
PLATFORM/iOS/PixFight.xcodeproj/: project.pbxproj
PLATFORM/iOS/PixFight/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
PLATFORM/iOS/PixFight/ViewControllers/: PFJoinViewController.h  PFJoinViewController.mm  PFLoadGameViewController.h  PFLoadGameViewController.m  PFMenuViewController.h  PFMenuViewController.mm  PFMultiplayerViewController.h  PFMultiplayerViewController.mm  PFNewGameViewController.h  PFNewGameViewController.m  PFOptionsViewController.h  PFOptionsViewController.mm  PFRenderViewController.h  PFRenderViewController.mm  PFRoomViewController.h  PFRoomViewController.mm  PFSelectUnitViewController.h  PFSelectUnitViewController.m
PLATFORM/iOS/freetype2-ios/freetype2.xcodeproj/: project.pbxproj
PLATFORM/macOS/PixFight/: AppDelegate+Audio.h  AppDelegate.h  AppDelegate.mm  Info.plist  main.m
PLATFORM/macOS/PixFight.xcodeproj/: project.pbxproj
PLATFORM/macOS/freetype/: libfreetype.6.dylib
SERVER/: PFServerCommandType.hpp  PFServerUtils.cpp
SERVER/PFClient/: Makefile  PFMultiplayerClient.cpp  PFMultiplayerClient.hpp  main.cpp
SERVER/PFServer/: Makefile  PFServerRoom.cpp  PFServerRoom.hpp  PFSocketClient.cpp  PFSocketClient.hpp  main.cpp
SERVER/PFServer.xcodeproj/: project.pbxproj
SERVER/PFServer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SERVER/PFServer/ServerDebug.xcodeproj/: project.pbxproj
SERVER/Utils/: EnumOptionMacro.hpp  PFServerCommandType.hpp  PFServerUtils.cpp  PFServerUtils.hpp  PFSocketClient.cpp
SERVER/clsocket/: Host.h  PassiveSocket.cpp  SimpleSocket.cpp  SimpleSocket.h  StatTimer.h
(+47 files in other folders)
